--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<br><br>
 		Live music, independent New Yorkers immersing into their phone screens, hippy oldies, smelly litters… Usual things I encounter in NYC subway stations were experienced along the way. But what made a huge different was my own feelings that (changes) so much when visiting each station. I remember being so scared waiting for the next train to come for more than 15 minutes at some stations and feeling the good vibes listening to the live music in the crowded at others. An experience like this is, I think, difficult to encounter in today’s digital age. We are so busy moving from one thing to another and delved so deeply into content on our phone screens, we often ignore our surroundings, feelings and opportunities to experience new things. 
 		<br><br>
-		I documented bits and bobs of every station in the forms of photographs and sounds and came up with this online exhibition that I’d like to invite you to visit and let me know what you think.
+		I documented bits and bobs of every station in the forms of photographs and sounds and came up with this online exhibition that I’d like to invite you to visit and let me know what you think. Also, <a href="mailto:ta273@cornell.edu?Subject=Manhattan%20Through%20Subway" target="_top">let me know</a> if you'd love to hop on another train together sometime ;) 
 		<br><br>
 		A huge shoutout to <span><a class="chelsea" href="http://chelseachan.me">Chelsea Chan</a></span> for editing the sounds I recorded during the journey. 
 		<br><br>
